src/main/terraform/firewall.tf
resource "azurerm_public_ip" "pip" {
  name= var.pip_name
  resource_group_name = azurerm_resource_group.aks.name
  location =  azurerm_resource_group.aks.location
  allocation_method = "Static"
  sku = "Standard"
}


resource "azurerm_firewall" "fw" {

    name= var.fw_name
    location = azurerm_resource_group.aks.location
    resource_group_name = azurerm_resource_group.aks.name
  
     ip_configuration {
       name = "fw_ip_config"
       subnet_id = azurerm_subnet.fwsubnet.id
       public_ip_address_id = azurerm_public_ip.pip.id


     }
     
}

resource "azurerm_firewall_network_rule_collection" "time" {

    name = "time"
    azure_firewall_name = azurerm_firewall.fw.name
    resource_group_name = azurerm_resource_group.aks.name
    priority = 101
    action = "Allow"

   rule {
    description           = "aks node time sync rule"
    name                  = "allow network"
    source_addresses      = ["*"]
    destination_ports     = ["123"]
    destination_addresses = ["*"]
    protocols             = ["UDP"]



   }


}



resource "azurerm_firewall_network_rule_collection" "dns" {

    name = "dns"
    azure_firewall_name = azurerm_firewall.fw.name
    resource_group_name = azurerm_resource_group.aks.name
    priority = 102
    action = "Allow" 

    rule {
      description           = "aks node dns rule"
      name                  = "allow network"
      source_addresses      = ["*"]
      destination_ports     = ["53"]
      destination_addresses = ["*"]
      protocols             = ["UDP"]
  }
    
    
    }

 resource "azurerm_firewall_network_rule_collection" "servicetags" {

    name = "servicetags"
    azure_firewall_name = azurerm_firewall.fw.name
    resource_group_name = azurerm_resource_group.aks.name
    priority = 110
    action = "Allow"  

    rule {
      description       = "allow service tags"
      name              = "allow service tags"
      source_addresses  = ["*"]
      destination_ports = ["*"]
      protocols         = ["Any"]

      destination_addresses = [
         "AzureContainerRegistry",
         "MicrosoftContainerRegistry",
         "AzureActiveDirectory"
    ]
    
    
    
    }
 }

resource "azurerm_firewall_application_rule_collection" "aksbasics" {
          name = "aksbasics"
          azure_firewall_name = azurerm_firewall.fw.name
          resource_group_name = azurerm_resource_group.aks.name
          priority = 101
          action = "Allow"
          
          rule {
              name             = "allow network"
              source_addresses = ["*"]

              target_fqdns = [
                "*.cdn.mscr.io",
                "mcr.microsoft.com",
                "*.data.mcr.microsoft.com",
                "management.azure.com",
                "login.microsoftonline.com",
                "acs-mirror.azureedge.net",
                "dc.services.visualstudio.com",
                "*.opinsights.azure.com",
                "*.oms.opinsights.azure.com",
                "*.microsoftonline.com",
                "*.monitoring.azure.com",
          ]

          protocol {
                port = "80"
                type = "Http"
             }

          protocol {
               port = "443"
               type = "Https"
    }
  }
    


}


resource "azurerm_firewall_application_rule_collection" "osupdates" {
          name = "osupdates"
          azure_firewall_name = azurerm_firewall.fw.name
          resource_group_name = azurerm_resource_group.aks.name
          priority = 102
          action = "Allow"

          rule {
            name = "allow network"
            source_addresses = ["*"]

            target_fqdns = [
                "download.opensuse.org",
                "security.ubuntu.com",
                "ntp.ubuntu.com",
                "packages.microsoft.com",
                "snapcraft.io"
              ]

          protocol {
             port = "80"
             type = "Http"
    }

          protocol {
             port = "443"
             type = "Https"
    }
  }
}


resource "azurerm_firewall_application_rule_collection" "publicimages" {
          name = "publicimages"
          azure_firewall_name = azurerm_firewall.fw.name
          resource_group_name = azurerm_resource_group.aks.name
          priority = 103
          action = "Allow"

          rule {
            name             = "allow network"
            source_addresses = ["*"]

            target_fqdns = [
              "auth.docker.io",
              "registry-1.docker.io",
              "production.cloudflare.docker.com"
    ]

          protocol {
            port = "80"
            type = "Http"
    }

          protocol {
            port = "443"
            type = "Https"
    }
  }
}

resource "azurerm_firewall_application_rule_collection" "test" {
  name                = "test"
  azure_firewall_name = azurerm_firewall.fw.name
  resource_group_name = azurerm_resource_group.aks.name
  priority            = 104
  action              = "Allow"

  rule {
    name             = "allow network"
    source_addresses = ["*"]

    target_fqdns = [
      "*.bing.com"
    ]

    protocol {
      port = "80"
      type = "Http"
    }

    protocol {
      port = "443"
      type = "Https"
    }
  }
}
